fix for app being too wide

--- a/src/components/toolbar/DmmToolbar.module.scss
+++ b/src/components/toolbar/DmmToolbar.module.scss
@@ -10,7 +10,7 @@
   text-align: left;
   padding-top: 10px;
   padding-right: 20px;
-  width: 100vw;
+  width: calc(100% - 20px);
   z-index: 90;
 }
 
